--- a/index.html
+++ b/index.html
@@ -1469,12 +1469,9 @@
       </div>
     </div>
   </article>
-
-
-
-<<<<<<< Updated upstream
-
-  <!-- treintaytres -->
+	  
+	  
+	  <!-- treintaytres -->
 
   <article id="treintatres" class="post invert style1 alt">
     <div class="image">
@@ -1503,59 +1500,17 @@
           </li>
         </ul>
       </div>
-      <div class="postnav">
+       <div class="postnav">
         <!--Poner el numero de id anterior-->
         <a href="#treintados" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
         <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-        <a href="" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
-=======
-    <!-- treintauno -->
-
-    <article id="treintauno" class="post invert style1 alt">
-      <div class="image">
-        <img
-          src="images/Ionic/1.png"
-          alt=""
-          width="80"
-          height="100"
-          data-position="20% center"
-        />
-      </div>
-      <div class="content">
-        <div class="inner">
-          <header>
-            <!--Apuntar al html con el nombre de la clase-->
-            <h2>
-              <a href="sites/Ionic.html">Ionic</a>
-            </h2>
-            <!--Fecha de la clase-->
-            <p class="info"> 01 de Febrero de 2021</p>
-          </header>
-          <!--Pequeña descripcion del tema-->
-          <p align="justify">
-			Ionic Framework es un conjunto de herramientas de interfaz de usuario de código abierto para crear aplicaciones móviles y de escritorio de alta calidad y rendimiento utilizando tecnologías web (HTML, CSS y JavaScript) con integraciones para marcos populares como Angular , React y Vue .
-          </p>
-          <ul class="actions">
-            <!--Apuntar al html con el nombre de la clase-->
-            <li>
-              <a href="sites/Ionic.html" class="button alt">Leer más</a>
-            </li>
-          </ul>
-        </div>
-        <div class="postnav">
-          <!--Poner el numero de id anterior-->
-          <a href="#veinteocho" class="scrolly prev"
-            ><span class="icon fa-chevron-up"></span
-          ></a>
-          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="" class="scrolly next"
-            ><span class="icon fa-chevron-down"></span
-          ></a>
-        </div>
->>>>>>> Stashed changes
+        <a href="#uno" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
       </div>
     </div>
   </article>
+
+
+
 
 
 
