--- a/sites/webview.html
+++ b/sites/webview.html
@@ -22,7 +22,7 @@
 
     <div>
         <a href="websocket.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
-        <a href="../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
+        <a href="Ionic.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
     </div>
     <!-- Main -->
     <section id="main">
@@ -74,7 +74,7 @@
     </section>
     <div>
         <a href="websocket.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
-        <a href="./../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
+        <a href="Ionic.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
     </div>
     <!-- Footer -->
     <footer id="footer">
