--- a/sites/ejemplosflutter.html
+++ b/sites/ejemplosflutter.html
@@ -29,7 +29,7 @@
         >Anterior</a
       >
       <a
-        href="#"
+        href="apache.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -137,7 +137,7 @@
         >Anterior</a
       >
       <a
-        href="#"
+        href="apache.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
